--- a/02-javascript-data-types/2-pick/index.html
+++ b/02-javascript-data-types/2-pick/index.html
@@ -8,23 +8,20 @@
 
 </body>
 <script>
-  const pick = (obj, ...fields) => {
-    let nw = {};
-
-    for (let fil in fields){
-      if (obj.hasOwnProperty(fields[fil])){
-        console.log(fields[fil])
-        nw[fields[fil]] = obj[fields[fil]]
+  const omit = (obj, ...fields) => {
+    //создаём новый объект и копируем в него исходный
+    let newObj = {};
+    Object.assign(newObj, obj);
+    //удаляем ненужные свойства из скопированного объекта
+    for (let fil of fields){
+      if (Object.hasOwn(obj, fil)){
+        delete newObj[fil];
       }
     }
-    return nw;
+    return newObj;
   };
 
-  const fruits = {
-    apple: 2,
-    orange: 4,
-    banana: 3
-  };
-  console.log(pick(fruits, 'apple', 'banana')); // { apple: 2, banana: 3 }
+  const fruits = {foo: 'foo', bar: 'bar', baz: 'foo'};
+  console.log(omit(fruits, 'foooo')); // { apple: 2, banana: 3 }
 </script>
 </html>
